--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- This is my index page for demo1 -->
 <h1>Charlie R. Gregorski</h1>
 <p>Version Control Essentials</p>
 <p>Hello my name is Charlie Gregorski and I love to golf.</p>
