--- a/contact.html
+++ b/contact.html
@@ -1,2 +1,3 @@
 <h1>Charles Gregorski</h1>
 <p>Version Control Essentials</p>
+<p>Contact me at <a href="mailto:charles@example.com">charlie@example.com</a></p>
