--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 <h1>Charlie R. Gregorski</h1>
 <p>Version Control Essentials</p>
 <p>Hello my name is Charlie Gregorski and I love to golf.</p>
-
+<p> Exercise 1: Pulling Changes</p>
