--- a/contact.html
+++ b/contact.html
@@ -2,3 +2,6 @@
 <p>Version Control Essentials</p>
 <p>This is actaully the change I want</p>
 
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis deleniti magnam delectus at laboriosam eaque nam eos sint in. Quam, perspiciatis vero ratione distinctio ea iure accusamus eligendi neque ducimus aliquam quas quidem ullam aspernatur error atque quo architecto alias. Ex sed iure nobis eveniet, quis ut in dolores? Fuga?
+</p>
