added first merge conflict comment

--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 <p>Version Control Essentials</p>
 <p>Hello my name is Charlie Gregorski and I love to golf.</p>
 <p> Exercise 1: Pulling Changes</p>
+<!-- Merge Conflict p1 -->
