--- a/stashpractice.html
+++ b/stashpractice.html
@@ -6,5 +6,6 @@
 <body>
     <h1>Welcome to My Site</h1>
     <p>This is my awesome website!</p>
+    <p>My name is Charlie and I played golf today!</p>
 </body>
 </html>
